test(calcite): harden query engine contract coverage